Updated Links for Index.html

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                     <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                                         laudantium.
                                     </p>
-                                    <a href="#" class="btn btn-rose">LEARN MORE</a>
+                                    <a href="http://welcomevipguest.com/" class="btn btn-rose">LEARN MORE</a>
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                                     <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                                         laudantium.
                                     </p>
-                                    <a href="#" class="btn btn-rose">LEARN MORE</a>
+                                    <a href="http://quickcallinc.com/" class="btn btn-rose">LEARN MORE</a>
                                 </div>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                     <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                                         laudantium.
                                     </p>
-                                    <a href="#" class="btn btn-rose">LEARN MORE</a>
+                                    <a href="https://blitzdial.com/Account/Login?ReturnUrl=%2F" class="btn btn-rose">LEARN MORE</a>
                                 </div>
                             </div>
                         </div>
